<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleBook</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred? Login here.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Full name</string>
    <string name="hint_ID">Student ID</string>
    <string name="booking_application">Booking Application</string>
    <string name="no_resources_found">No resources found</string>
    <string name="location">Location</string>
    <string name="find_resources">Find Resources</string>
    <string name="site_location">Site Location</string>
    <string name="used_for_site_location">Used for site location</string>
    <string name="the_actual_location_of_the_resource">The actual location of the resource</string>
    <string name="resources">Resources</string>
    <string name="todo">TODO</string>
    <string name="this_is_the_app_icon">This is the app icon</string>
    <string name="start">Start</string>
    <string name="create_booking">Create Booking</string>
    <string name="show_resources">Show Resources</string>
    <string name="there_are_no_bookings">There are no bookings</string>
    <string name="recent_bookings">Recent Bookings</string>
    <string name="logout">Logout</string>
    <string name="dialog_title">Warning!</string>
    <string name="datedialogbutton_text">Launch DatePickerDialog</string>

</resources>