<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/firstSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_main"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/label1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:hint="@string/used_for_site_location"
            android:text="@string/site_location"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:orientation="vertical"
        android:paddingBottom="5dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="#363636" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_main"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/label2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:hint="@string/the_actual_location_of_the_resource"
            android:text="@string/location"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourthSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:orientation="vertical"
        android:paddingBottom="5dp">

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="#363636" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/btnFind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/bg_main"
            android:text="@string/find_resources"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/info" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/resources"
            android:textColor="#363636"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:fontFamily="casual"
            android:gravity="center_horizontal"
            android:paddingTop="30dp"
            android:text="@string/no_resources_found"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/black" />

        <ListView
            android:id="@+id/resourcesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:divider="#0a0a0a"
            android:dividerHeight="2dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black" />
    </LinearLayout>

</LinearLayout>