<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="54dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:contentDescription="@string/this_is_the_app_icon"
                app:srcCompat="@drawable/header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:text="@string/app_name"
                android:textAllCaps="false"
                android:textColor="#363636"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timeView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/middleSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_main"
        android:orientation="vertical"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="3dp"
            android:text="@string/start"
            android:textColor="#ffffff"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="12dp">

            <ImageButton
                android:id="@+id/btnCreatebooking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/newbooking" />

            <ImageButton
                android:id="@+id/banShowResources"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/history" />

            <ImageButton
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/logout" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/bookingLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/create_booking"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/historyLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/show_resources"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/logoutLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/logout"
                android:textColor="#ffffff" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomSection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/info" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:text="@string/recent_bookings"
                android:textColor="#363636"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:gravity="center_horizontal"
                android:paddingTop="30dp"
                android:text="@string/there_are_no_bookings"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/black" />

            <ListView
                android:id="@+id/currentBookingsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:divider="#050505"
                android:dividerHeight="1dp"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>